# nfl-play-animate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  streamlit_app.py
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  api.py
app/models/: animation_types.py  models.py
app/modules/: animate.py  colors.py  play_animator.py
app/modules/animation/: __init__.py  animate.py  animator.py  colors.py  types.py
app/routers/: games.py  plays.py  weeks.py
app/schemas/: game.py  play.py  play_response.py  schemas.py  tracking.py  week.py
app/services/: crud.py
app/utils/: utils.py
tests/: test_api.py  test_ui.py
