[project]
name = "nfl-play-animate"
version = "0.1.0"
description = "Simple NFL Play Animator Web App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.3",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
]
