[project]
name = "nfl-play-animate"
version = "0.1.0"
description = "Simple NFL Play Animator Web App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.3",
    "matplotlib>=3.9.2",
    "nfl-data-py>=0.3.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pre-commit>=4.0.1",
    "psycopg2>=2.9.10",
    "pyarrow>=18.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
]

[tool.ruff.lint]
select = ["NPY201"]
